@@ -21,14 +21,13 @@ import java.io.IOException;
 
 import javax.servlet.ServletConfig;
 import javax.servlet.ServletException;
-import javax.servlet.http.HttpServlet;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
 /**
  * A Simple redirection servlet to help us deprecate old UI elements
  */
-public class RedirectServlet extends HttpServlet{
+public class RedirectServlet extends BaseSolrServlet {
   
   static final String CONTEXT_KEY = "${context}";
   
